Set chrome.storage

--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,8 @@
       "matches": ["https://*.awsapps.com/*"],
       "js": ["dist/content.js"]
     }
+  ],
+  "permissions": [
+    "storage"
   ]
 }
