--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es2016",
     "rootDir": "src",
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["chrome"],
     "outDir": "dist"
   },
 }
