--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,14 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.awsapps.com/*"],
-      "js": ["dist/content.js"]
+      "matches": [
+        "https://*.awsapps.com/*",
+        "https://*.console.aws.amazon.com/*"
+      ],
+      "js": [
+        "dist/content.js",
+        "dist/globalNav.js"
+      ]
     }
   ],
   "permissions": [
