Display aws account name (#6)
* Extract AWS account ID and name

* Set chrome.storage

* Implements background porcess

- When tab updated then call sendMessage

* Add content_script for manipulate global nav

* Replace compiled resources

* Remove console.log

--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,23 @@
   "description": "Extension of AWS SSO apps page",
   "version": "1.0",
   "manifest_version": 3,
+  "background": {
+    "service_worker": "dist/background.js"
+  },
   "content_scripts": [
     {
-      "matches": ["https://*.awsapps.com/*"],
-      "js": ["dist/content.js"]
+      "matches": [
+        "https://*.awsapps.com/*",
+        "https://*.console.aws.amazon.com/*"
+      ],
+      "js": [
+        "dist/content.js",
+        "dist/globalNav.js"
+      ]
     }
+  ],
+  "permissions": [
+    "storage",
+    "tabs"
   ]
 }
